// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components > widget > WidgetAccounts render should render given accounts list 1`] = `
<div class="widget-accounts">
  <option-button-stub data-test="new-account-button">
    New account
  </option-button-stub>
  <div class="widget-accounts-scroll-mask-wrapper">
    <ul class="widget-accounts-list">
      <li>
        <option-button-stub iconfill="#4B0470" data-test="account-button"><span class="widget-accounts-item-address"><i class="widget-accounts-item-identicon"><identicon-stub address="0x68Aa50bB77C85F99D55f3Ad3762C5EcD250967Cb" issmall="true"></identicon-stub></i> <span>0x68Aa50bB7...EcD250967Cb</span></span></option-button-stub>
      </li>
      <li>
        <option-button-stub iconfill="#4B0470" data-test="account-button"><span class="widget-accounts-item-address"><i class="widget-accounts-item-identicon"><identicon-stub address="0x68Aa50bB77C85F99D55f3Ad3762C5EcD250967Ca" issmall="true"></identicon-stub></i> <span>0x68Aa50bB7...EcD250967Ca</span></span></option-button-stub>
      </li>
    </ul>
  </div>
  <option-button-stub icon="arrow" data-test="logout-button">
    Logout
  </option-button-stub>
</div>
`;

exports[`components > widget > WidgetAccounts render should render initial component state 1`] = `
<div class="widget-accounts">
  <option-button-stub data-test="new-account-button">
    New account
  </option-button-stub>
  <div class="widget-accounts-scroll-mask-wrapper">
    <ul class="widget-accounts-list"></ul>
  </div>
  <option-button-stub icon="arrow" data-test="logout-button">
    Logout
  </option-button-stub>
</div>
`;
